add reset style

--- a/task02_conversion_types/src/index.html
+++ b/task02_conversion_types/src/index.html
@@ -4,8 +4,25 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" type="text/css" href="css/normalize.css" />
   <title>Task02</title>
 </head>
 <body>
+  <header>
+    <h1 class="header__title">conversion type</h1>
+    <button class="theme"></button>
+  </header>
+  <main>
+    <section class="main__generator">
+      окно генератор примера с кнопкой
+    </section>
+    <section class="main__interpreter">
+      окно интерпретатора
+    </section>
+    <section class="main__table">
+      таблица - индикации (разноцветная)
+    </section>
+  </main>
+  <footer></footer>
 </body>
 </html>
