refactoring:  comments / constans / e

--- a/task02_conversion_types/src/index.html
+++ b/task02_conversion_types/src/index.html
@@ -25,7 +25,7 @@
 
         <div class="operands__wrapper">
           <div class="first-operand">
-            <h3>coose  operand</h3>
+            <h3>choose  operand</h3>
             <ul class="operand-list">
               <li><button type="button" class="operand__item" data-item="0">true</button></li>
               <li><button type="button" class="operand__item" data-item="1">false</button></li>
