refactoring: reload page

--- a/task02_conversion_types/src/index.html
+++ b/task02_conversion_types/src/index.html
@@ -51,7 +51,7 @@
             </ul>
           </div>
           </div>
-
+          <div class="btnReload-wrapper"></div>
         </div>
       </section>
     </main>
