refactoring: index.js ref water

--- a/task02_conversion_types/src/index.html
+++ b/task02_conversion_types/src/index.html
@@ -17,9 +17,9 @@
       <section>
         <p class="title">Hello! Choose something from this</p>
         <div class="menu">
-          <button type="button" class="menu__button-1 menu__button">first == second</button>
-          <button type="button" class="menu__button-2 menu__button">first === second</button>
-          <button type="button" class="menu__button-3 menu__button">"if ( expression )"</button>
+          <button type="button" class="menu__button" data-menu="==" data-message="choose the first and second operand for comparison">first == second</button>
+          <button type="button" class="menu__button" data-menu="===" data-message="choose the first and second operand for comparison">first === second</button>
+          <button type="button" class="menu__button" data-menu="if" data-message="choose expression">"if ( expression )"</button>
         </div>
         <div class="display">Display</div>
 
