--- a/task02_conversion_types/src/index.html
+++ b/task02_conversion_types/src/index.html
@@ -57,6 +57,7 @@
     </main>
   </div>
 
+<script type="module" src="comparison.js"></script>
 <script type="module" src="calculator.js"></script>
 <script type="module" src="index.js"></script>
 
