--- a/task04/src/index.html
+++ b/task04/src/index.html
@@ -13,8 +13,12 @@
       <h1 class="header__title">Object Gauss</h1>
     </header>
     <main>
-      <section class="main__generator">
-        окно
+      <section>
+        <p class="title">Сгенированные цифры:</p>
+        <ul class="counts"></ul>
+      </section>
+      <section class="results">
+        <p class="title">график</p>
       </section>
     </main>
   </div>
