done: add modules

--- a/task04/src/index.html
+++ b/task04/src/index.html
@@ -15,7 +15,12 @@
     <main>
       <section>
         <p class="title">Сгенированные цифры:</p>
-        <ul class="counts"></ul>
+        <table class="table">
+          <tr>
+            <th>порядковый номер</th>
+            <th>значение</th>
+          </tr>
+        </table>
       </section>
       <section class="results">
         <p class="title">график</p>
