done: create results / display results

--- a/task04/src/index.html
+++ b/task04/src/index.html
@@ -22,8 +22,14 @@
           </tr>
         </table>
       </section>
-      <section class="results">
-        <p class="title">график</p>
+      <section>
+        <p class="title">Проверка результатов:</p>
+        <table class="table2">
+          <tr>
+            <th>число</th>
+            <th>как часто встречается</th>
+          </tr>
+        </table>
       </section>
     </main>
   </div>
