--- a/task05-sum-of-moore/src/index.html
+++ b/task05-sum-of-moore/src/index.html
@@ -10,5 +10,6 @@
 <body>
   <h1 class="title"> hello</h1>
   <script type="module" src="index.js"></script>
+  <!-- <script type="module" src="range.js"></script> -->
 </body>
 </html>
