--- a/task06_momento_memory/index.html
+++ b/task06_momento_memory/index.html
@@ -25,5 +25,7 @@
     </div>
   </form>
   <script type="module" src="./script/index.js"></script>
+  <script type="module" src="./script/display.js"></script>
+  <script type="module" src="./script/permutation.js"></script>
 </body>
 </html>
