refactoring: display() and spaces

--- a/task05-sum-of-moore/src/index.html
+++ b/task05-sum-of-moore/src/index.html
@@ -9,21 +9,21 @@
 </head>
 <body>
     <form action="" class="decor" name="sumForm">
-      <h3>Находим сумму чисел в диапазоне</h3>
+      <h3>Find the sum of numbers in the range</h3>
       <div class="form-group">
         <div class="group-item">
-          <input type="number" pattern="^[ 0-9]+$" id="first" name="first"  required><label for="first">min</label>
+          <input type="number" pattern="^[0-9]+$" id="first" name="first"  required><label for="first">min</label>
         </div>
         <div class="group-item">
-          <input type="number" pattern="^[ 0-9]+$" id="second" name="first" required><label for="second">max</label>
+          <input type="number" pattern="^[0-9]+$" id="second" name="first" required><label for="second">max</label>
         </div>
       </div>
       <div class="display">
-        <p >Сумма равна:</p>
+        <p>The sum is:</p>
       </div>
       <div class="submit-block">
         <div class="submit-button">
-          <input id='btnSubmit' type="button" value="Вычислить" >
+          <input id='btn-submit' type="button" value="calculate">
         </div>
       </div>
     </form>
