refactoring: clean code

--- a/task06_momento_memory/index.html
+++ b/task06_momento_memory/index.html
@@ -16,11 +16,11 @@
       </div>
     </div>
     <div class="display">
-      <p>Варианты:</p>
+      <p>Variants of words:</p>
     </div>
     <div class="submit-block">
       <div class="submit-button">
-        <input id='btnSubmit' type="button" value="Вычислить">
+        <input id='btnSubmit' type="button" value="Calculate">
       </div>
     </div>
   </form>
