--- a/task10_Hennessy_XO/src/index.html
+++ b/task10_Hennessy_XO/src/index.html
@@ -10,6 +10,8 @@
 </head>
 <body>
         <div id="game"></div>
-        <script src="index.js"></script>
+
+        <script type="module" src="./js/index.js"></script>
+        <script type="module" src="./js/renderField.js"></script>
 </body>
 </html>
