--- a/task10_Hennessy_XO/src/index.html
+++ b/task10_Hennessy_XO/src/index.html
@@ -13,5 +13,6 @@
 
         <script type="module" src="./js/index.js"></script>
         <script type="module" src="./js/renderField.js"></script>
+        <script type="module" src="./js/info.js"></script>
 </body>
 </html>
