ref: add checking steps & refactoring code

--- a/task10_Hennessy_XO/src/index.html
+++ b/task10_Hennessy_XO/src/index.html
@@ -14,5 +14,7 @@
         <script type="module" src="./js/index.js"></script>
         <script type="module" src="./js/renderField.js"></script>
         <script type="module" src="./js/info.js"></script>
+        <script type="module" src="./js/checkWinner.js"></script>
+        <script type="module" src="./js/checkGame.js"></script>
 </body>
 </html>
