add: module table

--- a/task11_table/src/index.html
+++ b/task11_table/src/index.html
@@ -6,10 +6,8 @@
     <title>task table</title>
 </head>
 <body>
-    <table>
-        <tr><th>текст заголовка</th><th>текст заголовка</th></tr>
-        <tr><td>данные</td><td>данные</td></tr>
-        <tr><td>данные</td><td>данные</td></tr>
+    <table class="table">
+        <tr class="head"><th>name</th><th>age</th></tr>
     </table>
 
     <script type="module" src="script/index.js"></script>
