--- a/task11_table/src/index.html
+++ b/task11_table/src/index.html
@@ -6,9 +6,7 @@
     <title>task table</title>
 </head>
 <body>
-    <table class="table">
-        <tr class="head"><th>name</th><th>age</th></tr>
-    </table>
+    <table class="table"></table>
 
     <script type="module" src="script/index.js"></script>
 </body>
