--- a/task12_quirk numbers/src/index.html
+++ b/task12_quirk numbers/src/index.html
@@ -5,9 +5,16 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="./style/style.css">
     <title>Polish Calculator</title>
 </head>
 <body>
-
+    <div class="wrapper">
+        <div class="calculator">
+            <div class="display"></div>
+            <div class="panel"></div>
+        </div>
+    </div>
+    <script type="module" src="./script/index.js"></script>
 </body>
 </html>
