--- a/task12_quirk numbers/src/index.html
+++ b/task12_quirk numbers/src/index.html
@@ -12,7 +12,28 @@
     <div class="wrapper">
         <div class="calculator">
             <div class="display"></div>
-            <div class="panel"></div>
+            <div class="panel">
+                <ul class="list-ops">
+                    <li class="op-item"><p class="item-op">+</p></li>
+                    <li class="op-item"><p class="item-op">-</p></li>
+                    <li class="op-item"><p class="item-op">*</p></li>
+                    <li class="op-item"><p class="item-op">/</p></li>
+                    <li class="op-item"><p class="item-op">C</p></li>
+                </ul>
+                <ul class="list-nums">
+                    <li class="list-item"> <p class="item-num">1</p></li>
+                    <li class="list-item"> <p class="item-num">2</p></li>
+                    <li class="list-item"> <p class="item-num">3</p></li>
+                    <li class="list-item"> <p class="item-num">4</p></li>
+                    <li class="list-item"> <p class="item-num">5</p></li>
+                    <li class="list-item"> <p class="item-num">6</p></li>
+                    <li class="list-item"> <p class="item-num">7</p></li>
+                    <li class="list-item"> <p class="item-num">8</p></li>
+                    <li class="list-item"> <p class="item-num">9</p></li>
+                    <li class="list-item"> <p class="item-num">0</p></li>
+                </ul>
+
+            </div>
         </div>
     </div>
     <script type="module" src="./script/index.js"></script>
