--- a/task12_quirk numbers/src/index.html
+++ b/task12_quirk numbers/src/index.html
@@ -9,33 +9,32 @@
     <title>Polish Calculator</title>
 </head>
 <body>
-    <div class="wrapper">
-        <div class="calculator">
-            <div class="display"></div>
-            <div class="panel">
-                <ul class="list-ops">
-                    <li class="op-item"><p class="item-op">+</p></li>
-                    <li class="op-item"><p class="item-op">-</p></li>
-                    <li class="op-item"><p class="item-op">*</p></li>
-                    <li class="op-item"><p class="item-op">/</p></li>
-                    <li class="op-item"><p class="item-op">C</p></li>
-                </ul>
-                <ul class="list-nums">
-                    <li class="list-item"> <p class="item-num">1</p></li>
-                    <li class="list-item"> <p class="item-num">2</p></li>
-                    <li class="list-item"> <p class="item-num">3</p></li>
-                    <li class="list-item"> <p class="item-num">4</p></li>
-                    <li class="list-item"> <p class="item-num">5</p></li>
-                    <li class="list-item"> <p class="item-num">6</p></li>
-                    <li class="list-item"> <p class="item-num">7</p></li>
-                    <li class="list-item"> <p class="item-num">8</p></li>
-                    <li class="list-item"> <p class="item-num">9</p></li>
-                    <li class="list-item"> <p class="item-num">0</p></li>
-                </ul>
-
-            </div>
+    <div class="calculator-grid">
+        <div class="output">
+            <div data-previous-operand class="previous-operand"></div>
+            <div data-current-operand class="current-operand"></div>
         </div>
+        <button data-number>1</button>
+        <button data-number>2</button>
+        <button data-number>3</button>
+        <button data-operation>÷</button>
+
+        <button data-number>4</button>
+        <button data-number>5</button>
+        <button data-number>6</button>
+        <button data-operation>*</button>
+
+        <button data-number>7</button>
+        <button data-number>8</button>
+        <button data-number>9</button>
+        <button data-operation>-</button>
+
+        <button data-equals >=</button>
+        <button data-number>0</button>
+        <button data-all-clear >AC</button>
+        <button data-operation>+</button>
     </div>
     <script type="module" src="./script/index.js"></script>
+    <script type="module" src="./script/calculator.js"></script>
 </body>
 </html>
