--- a/task13_asia_chronicle/src/index.html
+++ b/task13_asia_chronicle/src/index.html
@@ -14,16 +14,16 @@
         <p>Click on the button to open the dropdown menu.</p>
         <div class="dropdown-wrapper">
             <div class="dropdown">
-                <button onclick="myFunction1()" class="drop-btn">Title</button>
-                <div id="myDropdown-title" class="dropdown-content">
+                <button class="drop-btn drop-btn-title">Title</button>
+                <div class="myDropdown dropdown-title dropdown-content">
                     <a href="#home">Home</a>
                     <a href="#about">About</a>
                     <a href="#contact">Contact</a>
                 </div>
             </div>
             <div class="dropdown">
-                <button onclick="myFunction2()" class="drop-btn">Category</button>
-                <div id="myDropdown-category" class="dropdown-content">
+                <button class="drop-btn drop-btn-categories">Category</button>
+                <div class="myDropdown dropdown-categories dropdown-content">
                     <a href="#home">Home</a>
                     <a href="#about">About</a>
                     <a href="#contact">Contact</a>
@@ -35,6 +35,7 @@
     </div>
 
 
-    <script src="script/index.js"></script>
+    <script type="module" src="script/index.js"></script>
+    <script type="module" src="script/dataCollector.js"></script>
 </body>
 </html>
