--- a/task13_asia_chronicle/src/index.html
+++ b/task13_asia_chronicle/src/index.html
@@ -6,7 +6,7 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./style/style.css">
-    <title>asia chronicle</title>
+    <title>Dropdowns</title>
 </head>
 <body>
     <div class="wrapper">
@@ -14,20 +14,8 @@
         <p>Click on the button to open the dropdown menu.</p>
         <div class="dropdown-wrapper">
             <div class="dropdown">
-                <button class="drop-btn drop-btn-title">Title</button>
-                <div class="myDropdown dropdown-title dropdown-content">
-                    <a href="#home">Home</a>
-                    <a href="#about">About</a>
-                    <a href="#contact">Contact</a>
-                </div>
-            </div>
-            <div class="dropdown">
                 <button class="drop-btn drop-btn-categories">Category</button>
-                <div class="myDropdown dropdown-categories dropdown-content">
-                    <a href="#home">Home</a>
-                    <a href="#about">About</a>
-                    <a href="#contact">Contact</a>
-                </div>
+                <div class="myDropdown dropdown-categories dropdown-content"></div>
             </div>
         </div>
 
