feat: add listeners

--- a/task13_asia_chronicle/src/index.html
+++ b/task13_asia_chronicle/src/index.html
@@ -14,7 +14,7 @@
         <p>Click on the button to open the dropdown menu.</p>
         <div class="dropdown-wrapper">
             <div class="dropdown">
-                <button class="drop-btn drop-btn-categories">Category</button>
+                <button class="drop-btn drop-btn-categories">Categories</button>
                 <div class="myDropdown dropdown-categories dropdown-content"></div>
             </div>
         </div>
